# xwsystem

./: .gitignore  LICENSE  README.md  README_LONG.md  pyproject.toml  pyproject.xwsystem.toml  pytest.ini  requirements.txt
rust/: BUILD.md  BUILD_FIXES.md  Cargo.toml  QUICK_START_PYTHON.md  README.md  README_PYTHON.md  README_TEST.md  pyproject.toml
rust/.cargo/: config.toml
rust/docs/: BINDINGS_GUIDE.md  MIRROR_AUDIT.md  MIRROR_STATUS.md
rust/examples/: python_example.py  version_example.rs
rust/python/: pyproject.toml
rust/python/exonware/: __init__.py
rust/python/exonware/rust/: __init__.py
rust/python/exonware/rust/xwsystem/: __init__.py  dummy.py  version.py
rust/python/exonware/rust/xwsystem/caching/: __init__.py
rust/src/: base.rs  conf.rs  config.rs  contracts.rs  defs.rs  errors.rs  lib.rs  mod.rs  python_bindings.rs  version.rs
rust/src/caching/: base.rs  bloom_cache.rs  cache_manager.rs  conditional.rs  contracts.rs  decorators.rs  defs.rs  disk_cache.rs  distributed.rs  errors.rs  events.rs  eviction_strategies.rs  external_caching_rust.rs  fluent.rs  integrity.rs  lfu_cache.rs  lfu_optimized.rs  lru_cache.rs  memory_bounded.rs  metrics_exporter.rs  mod.rs  observable_cache.rs  pluggable_cache.rs  rate_limiter.rs  read_through.rs  secure_cache.rs  serializable.rs  stats.rs  tagging.rs  ttl_cache.rs  two_tier_cache.rs  utils.rs  validation.rs  warming.rs  write_behind.rs
rust/src/cli/: args.rs  base.rs  colors.rs  console.rs  contracts.rs  defs.rs  errors.rs  mod.rs  progress.rs  prompts.rs  tables.rs
rust/src/config/: base.rs  contracts.rs  defaults.rs  defs.rs  errors.rs  logging.rs  logging_setup.rs  mod.rs  performance.rs  performance_modes.rs  version_manager.rs
rust/src/http_client/: advanced_client.rs  base.rs  client.rs  contracts.rs  defs.rs  errors.rs  mod.rs
rust/src/io/: base.rs  contracts.rs  data_operations.rs  defs.rs  errors.rs  facade.rs  mod.rs
rust/src/io/archive/: archive.rs  archive_files.rs  archivers.rs  base.rs  codec_integration.rs  compression.rs  mod.rs
rust/src/io/archive/formats/: brotli_format.rs  lz4_format.rs  mod.rs  rar.rs  sevenzip.rs  squashfs_format.rs  tar.rs  wim_format.rs  zip.rs  zpaq_format.rs  zstandard.rs
rust/src/io/codec/: base.rs  contracts.rs  mod.rs  registry.rs
rust/src/io/common/: atomic.rs  base.rs  lock.rs  mod.rs  path_manager.rs  watcher.rs
rust/src/io/file/: base.rs  conversion.rs  file.rs  mod.rs  paged_source.rs  source.rs
rust/src/io/file/paging/: byte_paging.rs  line_paging.rs  mod.rs  record_paging.rs  registry.rs
rust/src/io/filesystem/: base.rs  local.rs  mod.rs
rust/src/io/folder/: base.rs  folder.rs  mod.rs
rust/src/io/serialization/: auto_serializer.rs  base.rs  contracts.rs  defs.rs  errors.rs  flyweight.rs  format_detector.rs  mod.rs  registry.rs  serializer.rs
rust/src/io/serialization/formats/: mod.rs
rust/src/io/serialization/formats/binary/: bson.rs  cbor.rs  marshal.rs  mod.rs  msgpack.rs  pickle.rs  plistlib.rs
rust/src/io/serialization/formats/database/: dbm.rs  mod.rs  shelve.rs  sqlite3.rs
rust/src/io/serialization/formats/text/: append_only_log.rs  configparser.rs  csv.rs  formdata.rs  json.rs  json5.rs  jsonlines.rs  mod.rs  multipart.rs  toml.rs  xml.rs  yaml.rs
rust/src/io/serialization/parsers/: base.rs  hifijson_parser.rs  json_fast_parser.rs  jsonic_parser.rs  justjson_parser.rs  mod.rs  picojson_parser.rs  registry.rs  simd_parser.rs  sonic_parser.rs  standard.rs
rust/src/io/serialization/utils/: mod.rs  path_ops.rs
rust/src/io/stream/: async_operations.rs  base.rs  codec_io.rs  mod.rs
rust/src/ipc/: async_fabric.rs  base.rs  contracts.rs  defs.rs  errors.rs  message_queue.rs  mod.rs  pipes.rs  process_manager.rs  process_pool.rs  shared_memory.rs
rust/src/monitoring/: base.rs  contracts.rs  defs.rs  error_recovery.rs  errors.rs  memory_monitor.rs  metrics.rs  mod.rs  performance_manager_generic.rs  performance_monitor.rs  performance_validator.rs  system_monitor.rs  tracing.rs  tracker.rs
rust/src/operations/: base.rs  contracts.rs  defs.rs  diff.rs  errors.rs  merge.rs  mod.rs  patch.rs
rust/src/patterns/: base.rs  context_manager.rs  contracts.rs  defs.rs  dynamic_facade.rs  errors.rs  handler_factory.rs  import_registry.rs  mod.rs  object_pool.rs  registry.rs
rust/src/plugins/: base.rs  contracts.rs  defs.rs  errors.rs  mod.rs
rust/src/query/: contracts.rs  errors.rs  mod.rs  registry.rs
rust/src/runtime/: base.rs  contracts.rs  defs.rs  env.rs  errors.rs  mod.rs  reflection.rs
rust/src/security/: base.rs  contracts.rs  crypto.rs  defs.rs  errors.rs  hazmat.rs  mod.rs  monitor.rs  path_validator.rs  policy.rs  resource_limits.rs  validator.rs
rust/src/shared/: base.rs  contracts.rs  defs.rs  errors.rs  mod.rs
rust/src/structures/: base.rs  circular_detector.rs  contracts.rs  defs.rs  errors.rs  mod.rs  tree_walker.rs
rust/src/threading/: async_primitives.rs  base.rs  contracts.rs  defs.rs  errors.rs  locks.rs  mod.rs  safe_factory.rs
rust/src/utils/: base.rs  contracts.rs  errors.rs  mod.rs  paths.rs  test_runner.rs  utils_contracts.rs
rust/src/utils/dt/: base.rs  contracts.rs  defs.rs  errors.rs  formatting.rs  humanize.rs  mod.rs  parsing.rs  timezone_utils.rs
rust/src/validation/: base.rs  contracts.rs  data_validator.rs  declarative.rs  defs.rs  errors.rs  fluent_validator.rs  mod.rs  schema_discovery.rs  type_safety.rs
rust/src_old/: base.rs  contracts.rs  defs.rs  dummy.rs  errors.rs  lib.rs  python_bindings.rs  shared.rs  version.rs
rust/src_old/io/: mod.rs
rust/src_old/io/serialization/: base.rs  mod.rs
rust/src_old/io/serialization/formats/: mod.rs
rust/src_old/io/serialization/formats/text/: csv.rs  (+7 more)
rust/tests/: lib.rs  shared_tests.rs  test_python_bindings.py  version_tests.rs
rust/tests/0.core/: mod.rs  runner.rs  test_core_base.rs  test_core_contracts.rs  test_core_defs.rs  test_core_errors.rs
rust/tests/1.unit/: mod.rs
rust/tests/1.unit/defs_tests/: test_defs.rs
rust/tools/ci/: README.md  build.bat  build_python.bat  install_dev.bat  run.bat  run_python_tests.bat
(+1080 files in other folders)
