
# Source size (src/*): ~2.65 MB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwsystem"
dynamic = ["version"]
description = "Enterprise-grade Python framework with AI-powered performance optimization, 24 serialization formats, military-grade security, automatic memory leak prevention, circuit breakers, and production monitoring - replaces 50+ dependencies"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["enterprise", "framework", "serialization", "security", "performance", "monitoring", "threading", "memory-management", "circuit-breaker", "object-pool", "crypto", "ai-optimization", "json", "yaml", "msgpack", "bson", "cbor", "exonware"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Information Technology", "Intended Audience :: System Administrators", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: System :: Systems Administration", "Topic :: Security :: Cryptography", "Topic :: Internet :: WWW/HTTP", "Topic :: Database", "Topic :: System :: Monitoring"]
dependencies = [
  "typing-extensions>=4.0.0",
]
authors = [{ name = "eXonware Backend Team" }]

[project.license]
text = "MIT"

[project.optional-dependencies]
lazy = ["exonware-xwlazy"]
full = [
  "trio",
  "h2",
  "socksio",
]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]
windows = ["pywin32>=300; platform_system == 'Windows'"]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwsystem"
Documentation = "https://github.com/exonware/xwsystem#readme"
Subtree = "https://github.com/exonware/xwsystem.git"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.hatch.version]
path = "src/exonware/xwsystem/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
include = ["src/xwsystem.py"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
