
# Source size (src/*): ~2.65 MB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwsystem"
dynamic = ["version"]
description = "Enterprise-grade Python framework with AI-powered performance optimization, 24 serialization formats, military-grade security, automatic memory leak prevention, circuit breakers, and production monitoring - replaces 50+ dependencies"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["enterprise", "framework", "serialization", "security", "performance", "monitoring", "threading", "memory-management", "circuit-breaker", "object-pool", "crypto", "ai-optimization", "json", "yaml", "msgpack", "bson", "cbor", "exonware"]
classifiers = ["Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Information Technology", "Intended Audience :: System Administrators", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: System :: Systems Administration", "Topic :: Security :: Cryptography", "Topic :: Internet :: WWW/HTTP", "Topic :: Database", "Topic :: System :: Monitoring"]
dependencies = [
  "typing-extensions>=4.0.0",
]
authors = [{ name = "eXonware Backend Team" }]

[project.license]
text = "MIT"

[project.optional-dependencies]
lazy = ["exonware-xwlazy"]
full = [
  "aiofiles>=23.0.0",
  "aiohttp>=3.9.0",
  "argon2-cffi",
  "attrs",
  "bcrypt>=4.0.0",
  "beautifulsoup4",
  "brotli",
  "cachebox",
  "cacheout",
  "cachetools",
  "cbor2>=5.0.0",
  "colorama",
  "cryptography>=3.4.0",
  "defusedxml>=0.7.0",
  "dicttoxml>=1.7.0",
  "diskcache",
  "django",
  "exonware-xwformats",
  "exonware-xwlazy",
  "fastavro",
  "gspread",
  "gspread-dataframe",
  "h2",
  "httpx>=0.23.0",
  "hyperjson",
  "hyperlight_hyperjson",
  "ijson>=3.2.0",
  "json5>=0.9.0",
  "jsonpatch>=1.32",
  "jsonpath-ng",
  "jsonpointer>=2.3",
  "jsonschema>=4.17.0",
  "lxml>=4.9.0",
  "lz4",
  "msgpack>=1.0.0",
  "msgspec",
  "netCDF4",
  "numpy",
  "oauth2client",
  "opentelemetry-api>=1.15.0",
  "opentelemetry-exporter-otlp-proto-http>=1.15.0",
  "opentelemetry-exporter-zipkin>=1.15.0",
  "opentelemetry-sdk>=1.15.0",
  "orjson>=3.8.0",
  "pandas",
  "plyvel",
  "protobuf",
  "psutil>=5.9.0",
  "py-ubjson",
  "py7zr",
  "pyarrow",
  "pylru",
  "pymongo>=3.12.0",
  "pysimdjson",
  "pytest-asyncio>=0.20.0",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=4.0.0",
  "pytest>=7.0.0",
  "python-rapidjson",
  "PyYAML>=5.4.0",
  "pyyaml-include>=1.3.0",
  "pytz",
  "pyzpaq",
  "rarfile",
  "requests>=2.28.0",
  "rich",
  "rtoml>=0.9.0",
  "ruamel.yaml>=0.17.0",
  "scipy",
  "setuptools>=65.0.0",
  "socksio",
  "toml>=0.10.2",
  "tomli-w>=1.0.0",
  "tomli>=2.0.0",
  "trio",
  "ujson",
  "xmlschema>=2.0.0",
  "xmltodict>=0.13.0",
  "zstandard",
]
dev = [
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]
windows = ["pywin32>=300; platform_system == 'Windows'"]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwsystem"
Documentation = "https://github.com/exonware/xwsystem#readme"
Subtree = "https://github.com/exonware/xwsystem.git"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.hatch.version]
path = "src/exonware/xwsystem/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
include = ["src/xwsystem.py"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
