[package]
name = "xwsystem"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Essential dependencies (required by generated code)
# Generated automatically by python_to_rust.py
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"
# Performance optimizations
rustc-hash = "1.1"  # Faster HashMap (FxHashMap)
ahash = "0.8"  # Alternative fast hash map

# External caching libraries for benchmarking
mini-moka = { version = "0.10", optional = true }  # Lightweight Moka (Caffeine port)
quick_cache = { version = "0.4", optional = true }  # Fast probabilistic cache
dashmap = { version = "5.5", optional = true }  # Fast concurrent HashMap

# Python bindings
pyo3 = { version = "0.21", optional = true, features = ["extension-module", "abi3-py38"] }
pythonize = { version = "0.21", optional = true }

# Optional high-performance JSON parsing libraries
simd-json = { version = "0.13", optional = true, features = ["serde"] }
sonic-rs = { version = "0.5", optional = true }
jsonic = { version = "0.2", optional = true }
justjson = { version = "0.1", optional = true }
json_fast = { version = "0.1", optional = true }
hifijson = { version = "0.2", optional = true }
picojson = { version = "0.1", optional = true }

# Dependencies detected from Python imports
# Review and adjust versions as needed
bcrypt = { version = "0.17", optional = true }  # Optional: requires NASM for ring/aws-lc-sys
ciborium = { version = "0.2", optional = true }  # Modern CBOR library (replaces deprecated cbor crate)
chrono-tz = "*"  # TODO: Set version (detected from pytz)
colored = "*"  # TODO: Set version (detected from colorama)
mongodb = "*"  # TODO: Set version (detected from bson)
reqwest = "*"  # TODO: Set version (detected from httpx) - pulls in aws-lc-sys via rustls
ring = "*"  # TODO: Set version (detected from cryptography)
rmp-serde = "*"  # TODO: Set version (detected from msgpack)
# serde_json already included as essential dependency above
serde_yaml = "*"  # TODO: Set version (detected from yaml)
sysinfo = "*"  # TODO: Set version (detected from psutil)
# tokio already included as essential dependency above
toml = "*"  # TODO: Set version (detected from toml)

# Archive and compression dependencies
zip = "0.6"
tar = "0.4"
flate2 = "1.0"  # For gzip compression
bzip2 = "0.4"  # For bz2 compression
xz2 = "0.1"  # For xz/lzma compression
base64 = "0.21"  # For base64 encoding
once_cell = "1.19"  # For lazy static initialization
brotli = "3.4"  # For brotli compression/decompression
lz4 = "1.24"  # For lz4 compression
zstd = "0.13"  # For zstandard compression

[features]
default = []
python = ["pyo3", "pythonize"]
# External caching libraries
external-caches = ["dep:mini-moka", "dep:quick_cache", "dep:dashmap"]
# High-performance JSON parser features
simd-json = ["dep:simd-json"]
sonic-rs = ["dep:sonic-rs"]
jsonic = ["dep:jsonic"]
justjson = ["dep:justjson"]
json_fast = ["dep:json_fast"]
hifijson = ["dep:hifijson"]
picojson = ["dep:picojson"]
# Enable all high-performance parsers
all-parsers = ["simd-json", "sonic-rs", "jsonic", "justjson", "json_fast", "hifijson", "picojson"]
# Optional security features
bcrypt = ["dep:bcrypt"]
cbor = ["dep:ciborium"]
